plugins {
    id 'java'
}

sourceCompatibility = '11'
targetCompatibility = '11'

compileJava {
    options.compilerArgs = [
            "--add-exports=jdk.compiler/com.sun.tools.javac.api=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.model=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.code=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=wn.tragulus",
            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=wn.tragulus",
    ]
}

compileTestJava {
    options.compilerArgs = [
//            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
//            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
    ]
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}


test {
    useJUnitPlatform()
}


jar {
    manifest {
        attributes(
                'Implementation-Title': project.name,
                'Implementation-Version': project.version)
    }
}